// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1 shapshot 1 1`] = `
<div
  className="src-shared-components-challenge-listing-___style__ChallengeFiltersExample___3IjeI"
  id="challengeFilterContainer"
>
  <h1
    className="src-shared-components-challenge-listing-___style__tc-title____Rpik"
  >
    CHALLENGES
  </h1>
  <hr
    className="src-shared-components-challenge-listing-___style__tc-seperator___2AnJv"
  />
  <ChallengeTab
    activeBucket="abc"
    previousBucketOfActiveTab={null}
    previousBucketOfPastChallengesTab={null}
    selectBucket={[MockFunction]}
    setPreviousBucketOfActiveTab={[Function]}
    setPreviousBucketOfPastChallengesTab={[Function]}
  />
  <div
    className="src-shared-components-challenge-listing-___style__tc-content-wrapper___1MqlF"
  >
    <div
      className="src-shared-components-challenge-listing-___style__sidebar-container-mobile___3e65d"
    >
      <Connect(SidebarContainer)
        expanding={false}
        setFilterState={[MockFunction]}
      />
      <Connect(Container)
        communityName={null}
        hidden={true}
        isAuth={false}
        setFilterState={[MockFunction]}
      />
    </div>
    <Connect(Listing)
      activeBucket="abc"
      auth={Object {}}
      challenges={Array []}
      communityName={null}
      expandTag={null}
      expandedTags={Array []}
      expanding={false}
      filterState={Object {}}
      loadMoreActive={null}
      loadMoreAll={null}
      loadMoreMy={null}
      loadMoreMyPast={null}
      loadMoreOnGoing={null}
      loadMoreOpenForRegistration={null}
      loadMorePast={null}
      loadMoreReviewOpportunities={null}
      loadingPastChallenges={false}
      newChallengeDetails={false}
      openChallengesInNewTabs={false}
      preListingMsg={null}
      prizeMode="money-usd"
      reviewOpportunities={Array []}
      selectBucket={[MockFunction]}
      setFilterState={[MockFunction]}
      setSort={[MockFunction]}
      sorts={Object {}}
    />
  </div>
</div>
`;

exports[`Matches shallow shapshot 2 shapshot 2 1`] = `
<div
  className="src-shared-components-challenge-listing-___style__ChallengeFiltersExample___3IjeI"
  id="challengeFilterContainer"
>
  <h1
    className="src-shared-components-challenge-listing-___style__tc-title____Rpik"
  >
    CHALLENGES
  </h1>
  <hr
    className="src-shared-components-challenge-listing-___style__tc-seperator___2AnJv"
  />
  <ChallengeTab
    activeBucket="abc"
    previousBucketOfActiveTab={null}
    previousBucketOfPastChallengesTab={null}
    selectBucket={[MockFunction]}
    setPreviousBucketOfActiveTab={[Function]}
    setPreviousBucketOfPastChallengesTab={[Function]}
  />
  <div
    className="src-shared-components-challenge-listing-___style__tc-content-wrapper___1MqlF"
  >
    <div
      className="src-shared-components-challenge-listing-___style__sidebar-container-desktop___h0bz6"
    >
      <Connect(SidebarContainer)
        expanding={false}
        setFilterState={[MockFunction]}
      />
      <Connect(Container)
        communityName={null}
        hidden={false}
        isAuth={false}
        setFilterState={[MockFunction]}
      />
    </div>
    <Connect(Listing)
      activeBucket="abc"
      auth={Object {}}
      challenges={Array []}
      communityName={null}
      expandTag={null}
      expandedTags={Array []}
      expanding={false}
      filterState={Object {}}
      loadMoreActive={null}
      loadMoreAll={null}
      loadMoreMy={null}
      loadMoreMyPast={null}
      loadMoreOnGoing={null}
      loadMoreOpenForRegistration={null}
      loadMorePast={null}
      loadMoreReviewOpportunities={null}
      loadingPastChallenges={false}
      newChallengeDetails={false}
      openChallengesInNewTabs={false}
      preListingMsg={null}
      prizeMode="money-usd"
      reviewOpportunities={Array []}
      selectBucket={[MockFunction]}
      setFilterState={[MockFunction]}
      setSort={[MockFunction]}
      sorts={Object {}}
    />
  </div>
</div>
`;
